--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,12 @@
 root: true
 
-env:
-  browser: true
+parserOptions:
+  ecmaVersion: 2015
+  sourceType: 'module'
 
-extends:
-  "htmlacademy/es5"
+env:
+  es6: true
+  browser: true
+  commonjs: true
+
+extends: "./eslintconfig.js"
